Fix scrollbar issue and add minor fixes to post design

--- a/styles/feed.css
+++ b/styles/feed.css
@@ -90,3 +90,15 @@ body.dark {
 .post > .post-footer {
     color: var(--aux-filler);
 }
+
+.top-content {
+    display: flex;
+    width: 100%;
+}
+
+.top-content > button {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
