--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,4 +9,7 @@
     --toggle-color: #DDD;
     --text-color: #707070;
     --primary-feed-color: #FFF;
+    --scrollbar-color: #F6F5FF;
+    --thumb-color: #538083;
+    --thumb-hover: #2A7F62;
 }
